--- a/client/pages/submitOrder/submitOrder.wxml
+++ b/client/pages/submitOrder/submitOrder.wxml
@@ -1,92 +1,86 @@
 <!--pages/submitOrder/submitOrder.wxml-->
 
 <view class='container'>
-  <!--订单房间信息-->
-  <view class='roomInfoBox'>
-    <view class='roomInfo'>
-      <!--房间类型-->
-      <view class='roomType'>
-        {{room.roomType}}
-      </view>
-      <!--预订时间-->
-      <view class='bookDate'>
-        <view class='checkInDate'>
-          入住:{{bookDate.checkInDate.month}}-{{bookDate.checkInDate.day}}({{bookDate.checkInDate.whatDay}})
+  <scroll-view class='frame' scroll-y='true'>
+    <!--订单房间信息-->
+    <view class='roomInfoBox'>
+      <view class='roomInfo'>
+        <!--房间类型-->
+        <view class='roomType'>
+          {{room.roomType}}
         </view>
-        <view class='checkOutDate'>
-          离店:{{bookDate.checkOutDate.month}}-{{bookDate.checkOutDate.day}}({{bookDate.checkOutDate.whatDay}})
-        </view>
-        <view class='manyDays'>
-          {{bookDate.manyDays}}晚
-        </view>
+        <!--预订时间-->
+        <view class='bookDate'>
+          <view class='checkInDate'>
+            入住:{{bookDate.checkInDate.month}}-{{bookDate.checkInDate.day}}({{bookDate.checkInDate.whatDay}})
+          </view>
+          <view class='checkOutDate'>
+            离店:{{bookDate.checkOutDate.month}}-{{bookDate.checkOutDate.day}}({{bookDate.checkOutDate.whatDay}})
+          </view>
+          <view class='manyDays'>
+            {{bookDate.manyDays}}晚
+          </view>
 
-        <!--房间主要设施-->
-        <view class='roomSimpleDetail'>
-          <text style='font-size:25rpx;' decode="{{true}}">
+          <!--房间主要设施-->
+          <view class='roomSimpleDetail'>
+            <text style='font-size:25rpx;' decode="{{true}}">
         {{room.bedType}}&nbsp;|&nbsp;{{room.breakfast}}&nbsp;|&nbsp;{{room.window}}
         </text>
-        </view>
-        <!--房间详情-->
-        <view class='roomDetail' bindtap='showRoomDetail'>
-          <text style='color:#34B8AB;font-size:25rpx;' decode="{{true}}">房间详情</text>
-          <image src='../../images/jump.png' class='jumpImg'></image>
+          </view>
+          <!--房间详情-->
+          <view class='roomDetail' bindtap='showRoomDetail'>
+            <text style='color:#34B8AB;font-size:25rpx;' decode="{{true}}">房间详情</text>
+            <image src='../../images/jump.png' class='jumpImg'></image>
+          </view>
         </view>
       </view>
+      <!--提示信息-->
+      <view class='waringInfo'>
+        <image src='../../images/赞.png' class='label'></image>
+        <text class='word' style='color:#FBAA30;'> 赞！您已选择最便宜的客房</text>
+        <image src='../../images/月亮.png' class='label'></image>
+        <text class='word' style='color:#FBAA30;'>预定成功后，酒店将为你整晚留房</text>
+        <image src='../../images/警告.png' class='label' hidden='{{hiddenOverTime}}'></image>
+        <text class='word' style='color:#78B8EA;' hidden='{{hiddenOverTime}}'>现已过可取消时间，预定成功后不可取消</text>
+        <image src='../../images/确认.png' class='label' hidden='{{hiddenInTime}}'></image>
+        <text class='word' style='color:#78B8EA;' hidden='{{hiddenInTime}}'>放心订！{{bookDate.checkOutDate.month}}月{{bookDate.checkInDate.day}}日18点前可免费取消</text>
+      </view>
     </view>
-    <!--提示信息-->
-    <view class='waringInfo'>
-      <image src='../../images/赞.png' class='label'></image>
-      <text class='word' style='color:#FBAA30;'> 赞！您已选择最便宜的客房</text>
-      <image src='../../images/月亮.png' class='label'></image>
-      <text class='word' style='color:#FBAA30;'>预定成功后，酒店将为你整晚留房</text>
-      <image src='../../images/警告.png' class='label' hidden='{{hiddenOverTime}}'></image>
-      <text class='word' style='color:#78B8EA;' hidden='{{hiddenOverTime}}'>现已过可取消时间，预定成功后不可取消</text>
-      <image src='../../images/确认.png' class='label' hidden='{{hiddenInTime}}'></image>
-      <text class='word' style='color:#78B8EA;' hidden='{{hiddenInTime}}'>放心订！{{bookDate.checkOutDate.month}}月{{bookDate.checkInDate.day}}日18点前可免费取消</text>
+    <!--订单详情-->
+    <view class='orderDetail'>
+      <!--房间数选择-->
+      <view class='roomNum'>
+        <view class='roomLabel'>房间数</view>
+        <picker class='roomNumChoose' bindchange="chooseRoomNum" value="{{roomIndex}}" range="{{roomNum}}">
+          <view class='chooseRoomNum'>
+            <view>{{roomNum[roomIndex]}}</view>
+            <image class='chooseImg' src='../../images/dropDown.png'></image>
+          </view>
+        </picker>
+      </view>
+      <!--入住人姓名-->
+      <view class='customerName' wx:for="{{customerName}}">
+        <view class='customerLabel'>入住人</view>
+        <input class='customerNameWrite' placeholder='{{item}}' bindinput='enterNmae' id='{{index}}'></input>
+      </view>
+      <!--联系方式-->
+      <view class='tellNum'>
+        <view class='tellLabel'>联系方式</view>
+        <input class='tellWrite' placeholder='{{tell}}' bindinput='enterTell' type='number' maxlength='11'></input>
+      </view>
+      <!--预计到达时间-->
+      <view class='reachTime'>
+        <view class='reachTimeLabel'>预计到店</view>
+        <picker class='chooseTime' bindchange="chooseTime" value="{{timeIndex}}" range="{{timeNum}}">
+          <view class='timeBox'>
+            <view>{{timeNum[timeIndex]}}</view>
+            <image class='chooseImg' src='../../images/dropDown.png'></image>
+          </view>
+        </picker>
+      </view>
     </view>
-  </view>
+  </scroll-view>
 
-  <!--订单详情-->
-  <view class='orderDetail'>
-    <!--房间数选择-->
-    <view class='roomNum'>
-      <view class='roomLabel'>房间数</view>
-
-      <picker class='roomNumChoose' bindchange="chooseRoomNum" value="{{roomIndex}}" range="{{roomNum}}">
-        <view class='chooseRoomNum'>
-          <view>{{roomNum[roomIndex]}}</view>
-          <image class='chooseImg' src='../../images/dropDown.png'></image>
-        </view>
-      </picker>
-
-
-
-    </view>
-    <!--入住人姓名-->
-    <view class='customerName' wx:for="{{customerName}}">
-      <view class='customerLabel'>入住人</view>
-      <input class='customerNameWrite' placeholder='{{item}}' bindinput='enterNmae' id='{{index}}'></input>
-    </view>
-    <!--联系方式-->
-    <view class='tellNum'>
-      <view class='tellLabel'>联系方式</view>
-      <input class='tellWrite' placeholder='{{tell}}' bindinput='enterTell' type='number' maxlength='11'></input>
-    </view>
-    <!--预计到达时间-->
-    <view class='reachTime'>
-      <view class='reachTimeLabel'>预计到店</view>
-
-      <picker class='chooseTime' bindchange="chooseTime" value="{{timeIndex}}" range="{{timeNum}}">
-        <view class='timeBox'>
-          <view>{{timeNum[timeIndex]}}</view>
-          <image class='chooseImg' src='../../images/dropDown.png'></image>
-        </view>
-      </picker>
-
-
-
-    </view>
-  </view>
 
   <!--预定按键-->
   <view class="bookRoom">
@@ -203,11 +197,10 @@
   <view>
     <!--背景灰色-->
     <view class='hiddenOrderDetail' bindtap='hiddenOrderDetail' hidden='{{hiddenOrderDetail}}'>
-      <scroll-view class='orderDetailHidden' hidden='{{hiddenOrderDetail}}' animation='{{hiddenOrderDetailAnimationData}}' scroll-y='true'>
-        <view>
-          <view class='order-label'>明细</view>
-
-        </view>
+    </view>
+    <scroll-view class='orderDetailHidden' hidden='{{hiddenOrderDetail}}' animation='{{hiddenOrderDetailAnimationData}}' scroll-y='true'>
+      <view class='orderDetailContainer'>
+        <view class='order-label'>明细</view>
         <view class='order-price'>
           <view class='order-price-label'>房费</view>
           <view class='order-price-num'>￥108</view>
@@ -226,8 +219,7 @@
             <view class='perPrice'>1 x ￥108</view>
           </view>
         </view>
-      </scroll-view>
-
-    </view>
+      </view>
+    </scroll-view>
   </view>
 </view>
