--- a/client/pages/submitOrder/submitOrder.wxss
+++ b/client/pages/submitOrder/submitOrder.wxss
@@ -525,3 +525,78 @@ justify-content: space-between;
   border-bottom: solid #f0f0f0 1rpx;
   width: 80%;
 }
+
+.chooseCustomer{
+  width: 100%;
+  height: 500rpx;
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  z-index: 1001;
+  background: #fff;
+  bottom: 0rpx;
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+}
+
+.chooseCustomer-label{
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  font-size: 35rpx;
+  margin-top: 20rpx;
+  margin-bottom: 10rpx;
+  padding-bottom: 20rpx;
+  border-bottom: solid #f0f0f0 1rpx;
+}
+
+.chooseCustomer-list{
+  display: flex;
+  width: 80%;
+  font-size: 25rpx;
+  margin-top: 5rpx;
+  
+  flex-direction: column;
+  padding-left: 25rpx;
+}
+.chooseCustomer-name{
+  display: flex;
+  width: 100%;
+  margin-bottom: 5rpx;
+}
+.chooseCustomer-tell{
+  display: flex;
+  width: 100%;
+  
+  margin-bottom: 10rpx;
+}
+.chooseCustomer-infoBox{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  
+}
+.chooseCustomer-info{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+border-bottom: solid #f0f0f0 1rpx;
+}
+.chooseCustomer-img-sure{
+width:30rpx;
+height:30rpx;
+margin-top:22rpx;
+margin-left:20rpx;
+border: solid #f0f0f0 1rpx;
+background-color: #1296DB;
+
+}
+
+.chooseCustomer-img-pen{
+ width:30rpx;
+height:30rpx;
+padding-top:22rpx;
+padding-right:20rpx;
+
+}
