--- a/client/pages/submitOrder/submitOrder.wxml
+++ b/client/pages/submitOrder/submitOrder.wxml
@@ -60,18 +60,13 @@
       </view>
       <!--入住人姓名-->
       <view class='getCustomerBox'>
-      <view class='getCustomer'>
-        <view class='customerName' wx:for="{{customerName}}">
-
-          <view class='customerLabel'>入住人</view>
-          <input class='customerNameWrite' placeholder='{{item}}' bindinput='enterNmae' id='{{index}}'></input>
+        <view class='getCustomer'>
+          <view class='{{index != (customerName.length - 1) ? "customerName" : "customerNameNoWire"}}' wx:for="{{customerName}}" >
+            <view class='customerLabel'>入住人</view>
+            <input class='customerNameWrite' placeholder='{{item}}' bindinput='enterNmae' id='{{index}}'></input>
+          </view>
         </view>
-      </view>
-        
-
-        <image class='getCustomerImg' src='../../images/myInfoNo.png'></image>
-
-
+        <image class='getCustomerImg' src='../../images/myInfoNo.png' bindtap='getContact'></image>
       </view>
       <!--联系方式-->
       <view class='tellNum'>
