--- a/client/pages/successOrder/successOrder.wxml
+++ b/client/pages/successOrder/successOrder.wxml
@@ -3,24 +3,24 @@
     <view class='roomInfo'>
       <!--房间类型-->
       <view class='roomType'>
-        商务大床房
+        {{room.roomTypeName}}
       </view>
       <!--预订时间-->
       <view class='bookDate'>
         <view class='checkInDate'>
-          入住:3-10(今天)
+          入住:{{bookDate.checkInDate.month}}-{{bookDate.checkInDate.day}}({{bookDate.checkInDate.whatDay}})
         </view>
         <view class='checkOutDate'>
-          离店:3-11(明天)
+          离店:{{bookDate.checkOutDate.month}}-{{bookDate.checkOutDate.day}}({{bookDate.checkOutDate.whatDay}})
         </view>
         <view class='manyDays'>
-          1晚
+          {{bookDate.manyDays}}晚
         </view>
 
         <!--房间主要设施-->
         <view class='roomSimpleDetail'>
           <text style='font-size:25rpx;' decode="{{true}}">
-        大床&nbsp;|&nbsp;含双早&nbsp;|&nbsp;有窗
+        {{room.facilities.bed.outside}}&nbsp;|&nbsp;{{room.facilities.breakfast.outside}}&nbsp;|&nbsp;{{room.facilities.window.outside}}
         </text>
         </view>
       </view>
