--- a/client/pages/homePage/homePage.wxss
+++ b/client/pages/homePage/homePage.wxss
@@ -35,7 +35,16 @@ page {
   background-color: rgba(0, 0, 0, 0.5);
   font-size: 25rpx;
 }
-
+.imageName{
+  z-index: 1001;
+  position: absolute;
+  bottom: 20rpx;
+  right: 150rpx;
+  color: white;
+  padding: 0rpx 25rpx;
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 25rpx;
+}
 .toBusinessInfoButton {
   display: flex;
   font-size: 26rpx;
