--- a/client/pages/homePage/homePage.wxss
+++ b/client/pages/homePage/homePage.wxss
@@ -10,6 +10,14 @@ page {
   height: 100%;
 }
 
+.businessInfo {
+  display: flex;
+  flex-direction: column;
+  font-size: 25rpx;
+  margin: 15rpx;
+  color:#a2a2a2;
+}
+
 .hotelBanner {
   width: 100%;
   height: 300rpx;
@@ -40,7 +48,7 @@ page {
   z-index: 1001;
   position: absolute;
   bottom: 20rpx;
-  right: 150rpx;
+  right: 20rpx;
   color: white;
   padding: 0rpx 25rpx;
   background-color: rgba(0, 0, 0, 0.5);
@@ -78,10 +86,6 @@ page {
   margin: 10rpx 20rpx;
 }
 
-.serviceType {
-  display: flex;
-}
-
 .businessIntroduction {
   display: flex;
   justify-content: space-between;
@@ -104,22 +108,23 @@ page {
   align-items: center;
   font-size: 30rpx;
   color: #808080;
-  width: 200rpx;
-  height: 200rpx;
+  width: 160rpx;
+  height: 160rpx;
 }
 
 .serviceButtonImgBack {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 120rpx;
-  height: 120rpx;
-  border-radius: 60rpx;
+  width: 80rpx;
+  height: 80rpx;
+  border-radius: 80rpx;
+  margin-bottom: 10rpx;
 }
 
 .serviceButtonImg {
-  height: 60rpx;
-  width: 60rpx;
+  height: 40rpx;
+  width: 40rpx;
 }
 
 .activity {
