--- a/client/pages/homePage/homePage.wxss
+++ b/client/pages/homePage/homePage.wxss
@@ -1,7 +1,6 @@
 /* pages/homePage/homePage.wxss */
 
 page {
-  width: 100%;
   height: 100%;
 }
 
@@ -15,7 +14,7 @@ page {
   flex-direction: column;
   font-size: 25rpx;
   margin: 15rpx;
-  color:#a2a2a2;
+  color: #a2a2a2;
 }
 
 .hotelBanner {
@@ -106,7 +105,7 @@ page {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 30rpx;
+  font-size: 25rpx;
   color: #808080;
   width: 160rpx;
   height: 160rpx;
@@ -116,9 +115,9 @@ page {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80rpx;
-  height: 80rpx;
-  border-radius: 80rpx;
+  width: 70rpx;
+  height: 70rpx;
+  border-radius: 70rpx;
   margin-bottom: 10rpx;
 }
 
@@ -133,4 +132,24 @@ page {
   font-size: 35rpx;
   color: #808080;
   margin-top: 50rpx;
+}
+
+.functionListBlock {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-top: 20rpx;
+  border-bottom: solid #f0f0f0 20rpx;
+}
+
+.functionList {
+  width: 40%;
+  font-size: 30rpx;
+  margin: 15rpx;
+}
+
+.functionTitle {
+  padding: 20rpx;
+  font-size: 30rpx;
+  border-left: solid #18c6b0;
 }
